kubernetes/auth-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-ms
    version: "1.0"
  name: auth-ms-deployment
  namespace: househunters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-ms
  template:
    metadata:
      labels:
        app: auth-ms
        version: "1.0"
    spec:
      # serviceAccountName: acua-ksa
      containers:
      - name: auth-ms-container
        image: ydoykov/s6-househunters-auth-ms:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9998
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 150m
            memory: 128Mi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-ms
  name: auth-ms-service
  namespace: househunters
spec:
  ports:
    - name: http
      # Internal cluster port
      port: 9998
      # Port inside of pod
      targetPort: 9998
  selector:
    # Pods with label
    app: auth-ms
