kubernetes/bid-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bid-ms
    version: "1.0"
  name: bid-ms-deployment
  namespace: househunters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bid-ms
  template:
    metadata:
      labels:
        app: bid-ms
        version: "1.0"
    spec:
      # serviceAccountName: acua-ksa
      containers:
      - name: bid-ms-container
        image: ydoykov/s6-househunters-bid-ms:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9996
        resources:
          limits:
            cpu: 300m
            memory: 512Mi
          requests:
            cpu: 150m
            memory: 256Mi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: bid-ms
  name: bid-ms-service
  namespace: househunters
spec:
  ports:
    - name: http
      # Internal cluster port
      port: 9996
      # Port inside of pod
      targetPort: 9996
  selector:
    # Pods with label
    app: bid-ms
