kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    version: "1.0"
  name: frontend-deployment
  namespace: househunters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: "1.0"
  template:
    metadata:
      labels:
        app: frontend
        version: "1.0"
    spec:
      containers:
      - name: frontend-container
        image: ydoykov/s6-househunters-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-service
  namespace: househunters
spec:
  ports:
    - name: http
      # Internal cluster port
      port: 3000
      # Port inside of pod
      targetPort: 3000
  selector:
    # Pods with label
    app: frontend
