kubernetes/listing-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: listing-ms
    version: "1.0"
  name: listing-ms-deployment
  namespace: househunters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listing-ms
  template:
    metadata:
      labels:
        app: listing-ms
        version: "1.0"
    spec:
      containers:
      - name: listing-ms-container
        image: ydoykov/s6-househunters-listing-ms:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9997
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 150m
            memory: 128Mi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: listing-ms
  name: listing-ms-service
  namespace: househunters
spec:
  ports:
    - name: http
      # Internal cluster port
      port: 9997
      # Port inside of pod
      targetPort: 9997
  selector:
    # Pods with label
    app: listing-ms
