kubernetes/media-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: media-ms
    version: "1.0"
  name: media-ms-deployment
  namespace: househunters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-ms
  template:
    metadata:
      labels:
        app: media-ms
        version: "1.0"
    spec:
      # serviceAccountName: acua-ksa
      containers:
      - name: media-ms-container
        image: ydoykov/s6-househunters-media-ms:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9999
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 125m
            memory: 128Mi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: media-ms
  name: media-ms-service
  namespace: househunters
spec:
  ports:
    - name: http
      # Internal cluster port
      port: 9999
      # Port inside of pod
      targetPort: 9999
  selector:
    # Pods with label
    app: media-ms
